@@ -1,73 +1,88 @@
-# SpringBoot 项目全局规范
+# PROJECT KNOWLEDGE BASE
 
-## 技术栈约束
-- **Java 17** + SpringBoot 3.x + Maven
-- 使用 **Lombok** 减少样板代码
-- **MapStruct** 用于对象转换（版本 >= 1.5.5）
-- **Spring Data JPA** 作为 ORM（避免原生 JDBC）
-- **Spring Security** + JWT 进行认证授权
+**Generated:** 2026-06-17
+**Commit:** `56589ba`
+**Branch:** (active branch)
 
-## 代码风格
-- 包结构必须遵循：
-- com.company.project/
-  ├── controller/ # REST API 层
-  ├── service/ # 业务逻辑层（接口+实现类）
-  ├── repository/ # 数据访问层
-  ├── entity/ # JPA 实体
-  ├── dto/ # 数据传输对象（request/response）
-  ├── mapper/ # MapStruct 映射器
-  ├── config/ # 配置类
-  ├── exception/ # 自定义异常
-  └── util/ # 工具类
+## OVERVIEW
 
+订单领域 DDD 单体服务，基于 Spring Boot 4.1.0 / JDK 25 / Gradle 9.5。严格遵循六边形架构 + 领域驱动设计。
 
-- **命名规范**：
-- Controller: `XxxController`
-- Service 接口: `XxxService`
-- Service 实现: `XxxServiceImpl`
-- Repository: `XxxRepository`
-- DTO: `XxxRequest`, `XxxResponse`, `XxxDTO`
+## STRUCTURE
 
-## 编码规则
-1. **所有 Controller 方法必须明确返回 `ResponseEntity<T>`**
-2. **Service 层必须添加事务注解 `@Transactional`**
-3. **Entity 必须使用 `@DynamicUpdate` 优化更新性能**
-4. **禁止在 Controller 中编写业务逻辑**
-5. **所有 public 方法必须有 Javadoc 注释**
-6. **使用 `@Valid` 进行参数校验，配合 `@NotNull`, `@Size` 等注解**
+```
+.opencode/
+├── commands/        # 工作流命令（9个）
+├── instructions/    # 编码规范
+├── skills/          # 技能脚本
+├── AGENTS.md        # 代理知识库
+└── opencode.json    # OpenCode 配置
+```
 
-## 异常处理
-- 统一使用全局异常处理器 `@RestControllerAdvice`
-- 自定义业务异常继承 `RuntimeException`
-- 错误码规范：`1000-1999` 参数错误，`2000-2999` 业务错误，`3000-3999` 系统错误
+```
+taotao-cloud-goods/
+├── api/               # RPC/gRPC 接口 + DTO
+├── application/       # 应用层：编排、事务、DTO转换
+├── assembly/          # 启动器 + 环境配置
+├── common/            # 公共工具、枚举
+├── domain/            # ★ 领域层（零外部依赖）
+├── facade/            # 防腐层（ACL）
+├── infrastructure/    # 持久化、MQ、事件
+└── interfaces/        # REST / RPC / gRPC
+```
 
-## API 设计规范
-- RESTful 风格：GET（查询）、POST（创建）、PUT（全量更新）、PATCH（部分更新）、DELETE（删除）
-- 分页查询统一使用 `PageRequest` + `Page<T>` 返回
-- API 路径前缀：`/api/v1/`
+## WHERE TO LOOK
 
-## 测试要求
-- 单元测试覆盖率 ≥ 80%
-- Controller 层使用 `@WebMvcTest`
-- Service 层使用 `@ExtendWith(MockitoExtension.class)`
-- Repository 层使用 `@DataJpaTest`
-- 使用 Testcontainers 进行集成测试
+| Task | Location |
+|------|----------|
+| 新增业务功能 | `application/service/command/` 定义接口 + `interfaces/controller/` |
+| 修改领域模型 | `domain/aggregate/` 或 `domain/entity/` |
+| 值对象 | `domain/valobj/` — 所有字段 final，无 setter |
+| 领域事件 | `domain/event/` — 聚合内 registerEvent，仓储 flush |
+| 仓储实现 | `infrastructure/persistent/repository/` |
+| API 定义 | `api/rpc/` 或 `api/inner/` |
+| 外部接口适配 | `facade/` |
+| 消息监听 | `infrastructure/event/` |
+| 定时任务 | `infrastructure/job/` |
 
-## 性能约束
-- 所有数据库查询必须使用分页（单次最多 100 条）
-- N+1 查询问题必须使用 `@EntityGraph` 解决
-- 批量操作必须使用 `saveAll()` 而非循环调用
-- Redis 缓存命中率 > 80%（使用 `@Cacheable`）
+## CONVENTIONS
 
-## 安全规范
-- 敏感数据（密码、身份证）必须加密存储（BCrypt）
-- SQL 注入防护：使用 JPA 参数绑定，禁止字符串拼接
-- XSS 防护：对输入进行 HTML 转义
-- 所有 API 必须进行权限验证（除登录/注册外）
+- 分层依赖方向：`interfaces → application → domain ← infrastructure`
+- 跨聚合通过 ID 引用，非对象引用
+- 事务边界仅开在 `application/` 层
+- Controller 按角色 buyer / seller / manager 分包
+- 命令/查询命名：`{动词}{名词}{Command|Query}`
+- 领域模型与持久化模型分离（domain entity ≠ PO）
 
-## 文档要求
-- 使用 SpringDoc OpenAPI 生成 API 文档
-- 每个 Controller 添加 `@Tag` 注解
-- 每个接口方法添加 `@Operation` 注解
-- 提供 `application-dev.yml`, `application-prod.yml` 环境配置
+## ANTI-PATTERNS (THIS PROJECT)
 
+- Controller 中写业务逻辑判断
+- 聚合根中注入 Repository 或 Domain Service
+- 值对象中包含业务行为以外的逻辑
+- Application Service 中包含业务规则判断
+- 跨聚合直接操作其他聚合的内部状态
+
+## UNIQUE STYLES
+
+- **API/Interfaces 分离**：`api/` 模块只放接口定义和 DTO，`interfaces/` 模块放实现，区别于常规的单模块做法
+- **Controller 按端分层**：buyer / seller / manager 三个子包，各端 API 完全隔离
+- **事件驱动仓储**：聚合根内 `registerEvent()`，仓储 `save()` 时自动 flush 发布
+- **防腐层独立为模块**：`facade/` 作为独立 gradle module，而非 application 的子包
+- **MapStruct + Record Builder + Lombok 三件套**：减少样板代码的同时保持不可变性
+
+## COMMANDS
+
+```bash
+gradlew build                              # 编译
+gradlew :...assembly:bootRun --args='--spring.profiles.active=dev'  # 启动dev
+gradlew checkstyleMain spotlessCheck pmdMain spotbugsMain          # 质量检查
+gradlew test                               # 测试
+gradlew publishToMavenLocal                # 发布到本地
+```
+
+## NOTES
+
+- JDK 25 预览特性，`--enable-preview` + 大量 `--add-exports`
+- `taotao-cloud-dependencies:2026.07` BOM 未开源，外部构建需要私有仓库凭据
+- 四个环境配置：dev / test / pre / pro
+- 代码质量门禁：Checkstyle + SpotBugs + PMD + Spotless + OWASP
